// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Release Dialog Renders the environment locks no release 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div>
      <div />
    </div>
  </div>
  <div
    class="MuiModal-root MuiDialog-root release-dialog css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd MuiDialog-paperFullWidth css-142erj9-MuiPaper-root-MuiDialog-paper"
        role="dialog"
      >
        <div
          class="release-dialog-app-bar"
        >
          <div
            class="release-dialog-app-bar-data"
          >
            <div
              class="release-dialog-message"
            >
              <span
                class="release-dialog-commitMessage"
              />
            </div>
            <div
              class="release-dialog-createdAt"
            />
            <div
              class="release-dialog-author"
            />
          </div>
          <span
            class="release-dialog-commitId"
            title="Commit Hash of the source repository."
          />
          <button
            aria-label=""
            class="mdc-button release-dialog-close"
          >
            <div
              class="mdc-button__ripple"
            />
            <svg>
              Close.svg
            </svg>
          </button>
        </div>
        <div
          class="release-env-group-list"
        >
          <ul
            class="release-env-list"
          />
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Release Dialog Renders the environment locks normal release 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div>
      <div />
    </div>
  </div>
  <div
    class="MuiModal-root MuiDialog-root release-dialog css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd MuiDialog-paperFullWidth css-142erj9-MuiPaper-root-MuiDialog-paper"
        role="dialog"
      >
        <div
          class="release-dialog-app-bar"
        >
          <div
            class="release-dialog-app-bar-data"
          >
            <div
              class="release-dialog-message"
            >
              <span
                class="release-dialog-commitMessage"
              >
                test1
              </span>
            </div>
            <div
              class="release-dialog-createdAt"
            >
              <div>
                some formatted date
              </div>
            </div>
            <div
              class="release-dialog-author"
            >
              Author: test
            </div>
          </div>
          <span
            class="release-dialog-commitId"
            title="Commit Hash of the source repository."
          >
            commit
          </span>
          <button
            aria-label=""
            class="mdc-button release-dialog-close"
          >
            <div
              class="mdc-button__ripple"
            />
            <svg>
              Close.svg
            </svg>
          </button>
        </div>
        <div
          class="release-env-group-list"
        >
          <ul
            class="release-env-list"
          >
            <li
              class="env-card"
            >
              <div
                class="env-card-header"
              >
                <div
                  class="mdc-evolution-chip release-environment release-environment-upstream"
                  role="row"
                >
                  <span
                    class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary mdc-evolution-chip__action--primary"
                    role="gridcell"
                  >
                    <span
                      class="mdc-evolution-chip__text-name"
                    >
                      prod
                    </span>
                     
                    <span
                      class="mdc-evolution-chip__text-numbers"
                    />
                    <div
                      class="release-environment env-locks"
                    >
                      <div
                        aria-label="Lock Message: \\"envLock\\" | ID: \\"ui-envlock\\"  | Click to unlock. "
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label=""
                          class="mdc-button button-lock"
                        >
                          <div
                            class="mdc-button__ripple"
                          />
                          <svg
                            class="env-card-env-lock-icon"
                            height="24px"
                            width="24px"
                          >
                            Locks_White.svg
                          </svg>
                        </button>
                      </div>
                    </div>
                  </span>
                </div>
                <div
                  class="env-card-app-locks"
                >
                  <div
                    aria-label="Lock Message: \\"appLock\\" | ID: \\"ui-applock\\"  | Click to unlock. "
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      aria-label=""
                      class="mdc-button button-lock"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <svg
                        class="env-card-app-lock"
                      >
                        Locks.svg
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content-area"
              >
                <div
                  class="content-left"
                >
                  <div
                    class="env-card-data"
                    title="Shows the version that is currently deployed on prod. "
                  >
                    commit: test1
                  </div>
                </div>
                <div
                  class="content-right"
                >
                  <div
                    class="env-card-buttons"
                  >
                    <button
                      aria-label="Add lock"
                      class="mdc-button env-card-add-lock-btn"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <svg
                        class="icon"
                      >
                        Locks.svg
                      </svg>
                      <span
                        class="mdc-button__label"
                      >
                        Add lock
                      </span>
                    </button>
                    <button
                      aria-label="Deploy"
                      class="mdc-button env-card-deploy-btn mdc-button--unelevated"
                      disabled=""
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <span
                        class="mdc-button__label"
                      >
                        Deploy
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Release Dialog Renders the environment locks two envs release 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div>
      <div />
    </div>
  </div>
  <div
    class="MuiModal-root MuiDialog-root release-dialog css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-hz1bth-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthMd MuiDialog-paperFullWidth css-142erj9-MuiPaper-root-MuiDialog-paper"
        role="dialog"
      >
        <div
          class="release-dialog-app-bar"
        >
          <div
            class="release-dialog-app-bar-data"
          >
            <div
              class="release-dialog-message"
            >
              <span
                class="release-dialog-commitMessage"
              >
                test1
              </span>
            </div>
            <div
              class="release-dialog-createdAt"
            >
              <div>
                some formatted date
              </div>
            </div>
            <div
              class="release-dialog-author"
            >
              Author: test
            </div>
          </div>
          <span
            class="release-dialog-commitId"
            title="Commit Hash of the source repository."
          >
            commit
          </span>
          <button
            aria-label=""
            class="mdc-button release-dialog-close"
          >
            <div
              class="mdc-button__ripple"
            />
            <svg>
              Close.svg
            </svg>
          </button>
        </div>
        <div
          class="release-env-group-list"
        >
          <ul
            class="release-env-list"
          >
            <li
              class="env-card"
            >
              <div
                class="env-card-header"
              >
                <div
                  class="mdc-evolution-chip release-environment release-environment-upstream"
                  role="row"
                >
                  <span
                    class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary mdc-evolution-chip__action--primary"
                    role="gridcell"
                  >
                    <span
                      class="mdc-evolution-chip__text-name"
                    >
                      prod
                    </span>
                     
                    <span
                      class="mdc-evolution-chip__text-numbers"
                    />
                    <div
                      class="release-environment env-locks"
                    >
                      <div
                        aria-label="Lock Message: \\"envLock\\" | ID: \\"ui-envlock\\"  | Click to unlock. "
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label=""
                          class="mdc-button button-lock"
                        >
                          <div
                            class="mdc-button__ripple"
                          />
                          <svg
                            class="env-card-env-lock-icon"
                            height="24px"
                            width="24px"
                          >
                            Locks_White.svg
                          </svg>
                        </button>
                      </div>
                    </div>
                  </span>
                </div>
                <div
                  class="env-card-app-locks"
                >
                  <div
                    aria-label="Lock Message: \\"appLock\\" | ID: \\"ui-applock\\"  | Click to unlock. "
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      aria-label=""
                      class="mdc-button button-lock"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <svg
                        class="env-card-app-lock"
                      >
                        Locks.svg
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content-area"
              >
                <div
                  class="content-left"
                >
                  <div
                    class="env-card-data"
                    title="Shows the version that is currently deployed on prod. "
                  >
                    commit: test1
                  </div>
                </div>
                <div
                  class="content-right"
                >
                  <div
                    class="env-card-buttons"
                  >
                    <button
                      aria-label="Add lock"
                      class="mdc-button env-card-add-lock-btn"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <svg
                        class="icon"
                      >
                        Locks.svg
                      </svg>
                      <span
                        class="mdc-button__label"
                      >
                        Add lock
                      </span>
                    </button>
                    <button
                      aria-label="Deploy"
                      class="mdc-button env-card-deploy-btn mdc-button--unelevated"
                      disabled=""
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <span
                        class="mdc-button__label"
                      >
                        Deploy
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </li>
            <li
              class="env-card"
            >
              <div
                class="env-card-header"
              >
                <div
                  class="mdc-evolution-chip release-environment release-environment-upstream"
                  role="row"
                >
                  <span
                    class="mdc-evolution-chip__cell mdc-evolution-chip__cell--primary mdc-evolution-chip__action--primary"
                    role="gridcell"
                  >
                    <span
                      class="mdc-evolution-chip__text-name"
                    >
                      dev
                    </span>
                     
                    <span
                      class="mdc-evolution-chip__text-numbers"
                    />
                    <div
                      class="release-environment env-locks"
                    >
                      <div
                        aria-label="Lock Message: \\"envLock\\" | ID: \\"ui-envlock\\"  | Click to unlock. "
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label=""
                          class="mdc-button button-lock"
                        >
                          <div
                            class="mdc-button__ripple"
                          />
                          <svg
                            class="env-card-env-lock-icon"
                            height="24px"
                            width="24px"
                          >
                            Locks_White.svg
                          </svg>
                        </button>
                      </div>
                    </div>
                  </span>
                </div>
                <div
                  class="env-card-app-locks"
                >
                  <div
                    aria-label="Lock Message: \\"appLock\\" | ID: \\"ui-applock\\"  | Click to unlock. "
                    class=""
                    data-mui-internal-clone-element="true"
                  >
                    <button
                      aria-label=""
                      class="mdc-button button-lock"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <svg
                        class="env-card-app-lock"
                      >
                        Locks.svg
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="content-area"
              >
                <div
                  class="content-left"
                >
                  <div
                    class="env-card-data"
                    title="Shows the version that is currently deployed on dev. "
                  >
                    cafe: the other commit message 3
                  </div>
                  <div
                    class="env-card-data env-card-data-queue"
                    title="An attempt was made to deploy version 666 either by a release train, or when a new version was created. However, there was a lock present at the time, so kuberpult did not deploy this version. "
                  >
                    Version 
                    666
                     was not deployed, because of a lock.
                  </div>
                </div>
                <div
                  class="content-right"
                >
                  <div
                    class="env-card-buttons"
                  >
                    <button
                      aria-label="Add lock"
                      class="mdc-button env-card-add-lock-btn"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <svg
                        class="icon"
                      >
                        Locks.svg
                      </svg>
                      <span
                        class="mdc-button__label"
                      >
                        Add lock
                      </span>
                    </button>
                    <button
                      aria-label="Deploy"
                      class="mdc-button env-card-deploy-btn mdc-button--unelevated"
                    >
                      <div
                        class="mdc-button__ripple"
                      />
                      <span
                        class="mdc-button__label"
                      >
                        Deploy
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
